# oxihipo

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml  docs.yml  wheels.yml
crates/hipo/: Cargo.toml
crates/hipo-analysis/: Cargo.toml
crates/hipo-analysis/examples/: analysis.rs
crates/hipo-analysis/src/: algorithm.rs  analysis.rs  context.rs  hist.rs  kinematics.rs  lib.rs  output.rs  prelude.rs  skim.rs
crates/hipo-analysis/tests/: framework.rs
crates/hipo/examples/: bench_par.rs  bench_scan.rs  parallel.rs  read.rs  recook.rs  recook_by_bank.rs  write.rs  write_array.rs
crates/hipo/src/: compress.rs  error.rs  lib.rs  prelude.rs
crates/hipo/src/event/: bank.rs  build.rs  ctx.rs  mod.rs  owned.rs  row.rs
crates/hipo/src/read/: chain.rs  filter.rs  inner.rs  iter.rs
crates/hipo/src/schema/: dict.rs  handle.rs  mod.rs  parse.rs  types.rs
crates/hipo/src/wire/: by_bank.rs  constants.rs  event_index.rs  mod.rs  record.rs  record_header.rs
crates/hipo/src/write/: bank.rs  mod.rs  record.rs  writer.rs
crates/hipo/tests/: chain.rs  chain_parallel.rs  macros.rs  no_alloc.rs  round_trip.rs
docs/: compression-benchmark.typ  python-binding-design.md  python-vs-rust-benchmark.md
examples/: bench_columns.rs  bench_decoders.rs  bench_event_tags.rs  bench_par.rs  bench_read_compression.rs  bench_scan.rs  clas12.rs  columns.rs  list_populated_banks.rs  parallel.rs  read.rs  recook.rs  recook_by_bank.rs  skim.rs  tag_and_skim.rs  write.rs  write_array.rs
proptest-regressions/: compress.txt
py/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
py/.cargo/: config.toml
py/examples/: analysis.py  bench_columns.py  bench_compression.py  bench_rdataframe.py  decorate.py  event_tags.py  interop.py  parallel.py  quickstart.py  rdataframe.py  streaming.py  tutorial_sample.py  writing.py
py/python/oxihipo/: __init__.py  _oxihipo.pyi  _parallel.py
py/src/: error.rs  lib.rs
py/tests/: test_oxihipo.py
py/tests/data/: sample.hipo  sample_none.hipo
src/: clas12.rs  compress.rs  error.rs  lib.rs  prelude.rs  tag.rs
src/event/: bank.rs  build.rs  composite.rs  ctx.rs  event.rs  mod.rs  owned.rs  row_typed.rs
src/read/: chain.rs  columns.rs  filter.rs  inner.rs  iter.rs  mod.rs  source.rs
src/schema/: dict.rs  handle.rs  parse.rs  types.rs
src/wire/: by_bank.rs  bytes.rs  constants.rs  file_header.rs  mod.rs  per_column.rs  record.rs  record_header.rs
src/write/: mod.rs  record.rs  row.rs  writer.rs
tests/: all_formats.rs  chain.rs  chain_parallel.rs  columns.rs  corruption.rs  end_to_end.rs  event_tag.rs  macros.rs  no_alloc.rs  per_column.rs  round_trip.rs  skim.rs
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: intro.md
website/docs/design/: event-tagging.md  python-binding.md  python-vs-rust-benchmark.md
website/docs/getting-started/: python.md  rust.md
website/docs/performance/: benchmarks.md  compression.md  shared-filesystems.md
website/docs/python/: how-it-works.md  parallel.md  rdataframe.md  reading.md  streaming.md  writing.md
website/docs/rust/: design.md  reading.md  writing.md
website/docs/tutorial/: clas12-and-hipo.md  detector-and-pid.md  exclusive-channels.md  first-look.md  inclusive-dis.md  index.md  particles-and-kinematics.md  scaling-up.md
website/src/components/HomepageFeatures/: index.js  styles.module.css
website/src/css/: custom.css
website/src/pages/: index.js  index.module.css
