[package]
name = "oxhipo"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "Apache-2.0"
repository = "https://github.com/mathieuouillon/oxhipo"
authors = ["hipo-rs contributors"]
description = "Pure-Rust HIPO v6 reader and writer (Jefferson Lab CLAS12)."

[dependencies]
thiserror = "2"
lz4_flex = { version = "0.11", default-features = false, features = ["std", "safe-decode"] }
flate2 = { version = "1", features = ["zlib-rs"] }
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
glob = "0.3"
mimalloc = { version = "0.1", default-features = false, optional = true }
# Optional: the official C LZ4 bindings. When the `lz4-c` feature is on,
# we use `lz4-sys` for both default and high-compression LZ4 paths.
# Benefits:
#   - decompression: ~10–15% faster on Apple Silicon than `lz4_flex`.
#   - compression: enables real LZ4 HC (`Lz4Best`), matching the
#     compression ratio of the original C++ writer (≈ 10–15% smaller
#     output files).
# Cost: pulls in a C dependency. Enabled by default for speed; opt out
# with `--no-default-features` if you want a pure-Rust build.
lz4-sys = { version = "1.10", optional = true }

[features]
default = ["lz4-c"]
# Override the global allocator with mimalloc. Library users opt in when
# they need it on macOS, where the system allocator underperforms under
# heavy allocation churn. Cross-platform — works on macOS and Linux
# equivalently.
mimalloc-allocator = ["dep:mimalloc"]
# Use the C LZ4 bindings (`lz4-sys`) instead of the pure-Rust `lz4_flex`.
# Faster decompression and unlocks `LZ4_compress_HC` for `Compression::Lz4Best`.
lz4-c = ["dep:lz4-sys"]
# Route LZ4 *decompression* through Apple's system `libcompression` framework
# (`COMPRESSION_LZ4_RAW`). On Apple Silicon this is ~7% faster than the
# reference C `liblz4`. Decompression-only; compression still uses
# `lz4-c` or `lz4_flex`. Active only on macOS (the cfg-gate is in
# `compress.rs`); enabling it on other platforms is a no-op.
lz4-apple = []

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1"

[lib]
bench = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = "line-tables-only"
strip = "none"

[profile.bench]
inherits = "release"
debug = true
strip = "none"

[profile.dev]
opt-level = 1   # readers chew through MB; pure -O0 is too painful
