[package]
name = "oxihipo-py"
version = "0.1.0"
edition = "2021"
publish = false
description = "Python bindings for the oxihipo HIPO reader"

[lib]
name = "_oxihipo"
# cdylib: the importable extension module. rlib: lets `cargo check`/doc the
# pure-Rust parts without an interpreter.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Pure-Rust core (lz4_flex decode) — the binding only reads, so it needs no
# C LZ4 / HC compression path.
oxihipo = { path = "..", default-features = false }
# The abi3 stable-ABI floor stays at py39 (a cp39-abi3 wheel is forward-compatible
# and runs on 3.13+). `requires-python = ">=3.13"` in pyproject.toml is what
# enforces the 3.13 minimum — pip refuses to install on anything older. Raising
# the abi3 floor to py312 is cosmetic here and broke maturin's interpreter-free
# Windows wheel build ("Need a Python interpreter … generate-import-lib"), so we
# keep py39.
pyo3 = { version = "0.23", features = ["abi3-py39", "extension-module"] }
# rust-numpy tracks pyo3; 0.23 pairs with pyo3 0.23 and exposes the stable
# `Vec::into_pyarray(py) -> Bound<PyArray>` zero-copy move.
numpy = "0.23"

# PyO3's trampoline can only *catch* an unwinding panic; a `panic = "abort"`
# cdylib would abort the whole interpreter. This crate is its own workspace
# root (the `[workspace]` below) so it does NOT inherit the core's
# `panic = "abort"` release profile.
[profile.release]
panic = "unwind"
# Match the core's release profile so the shipped wheel is as fast as a native
# Rust build (cross-crate inlining of the decode + materialize hot loops).
# Costs wheel build time (LTO); worth it for a read-throughput library.
opt-level = 3
lto = "fat"
codegen-units = 1

[workspace]
