[package]
name = "oxihipo-py"
version = "0.1.0"
edition = "2021"
publish = false
description = "Python bindings for the oxihipo HIPO reader"

[lib]
name = "_oxihipo"
# cdylib: the importable extension module. rlib: lets `cargo check`/doc the
# pure-Rust parts without an interpreter.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Pure-Rust core (lz4_flex decode) — the binding only reads, so it needs no
# C LZ4 / HC compression path.
oxihipo = { path = "..", default-features = false }
# `requires-python = ">=3.13"` (pyproject.toml) enforces the 3.13 minimum. The
# abi3 floor stays py39 (a cp39-abi3 wheel is forward-compatible, runs on 3.13+).
# `generate-import-lib` lets the **Windows** wheel build *without* a Python
# interpreter: on the CI runner maturin finds no `>=3.13` interpreter that
# `requires-python` accepts, so it builds interpreter-free (which abi3 supports
# via python3-dll-a). Without this feature that path errors ("Need a Python
# interpreter to compile for Windows …"). No-op on Linux/macOS.
pyo3 = { version = "0.23", features = [
    "abi3-py39",
    "extension-module",
    "generate-import-lib",
] }
# rust-numpy tracks pyo3; 0.23 pairs with pyo3 0.23 and exposes the stable
# `Vec::into_pyarray(py) -> Bound<PyArray>` zero-copy move.
numpy = "0.23"

# PyO3's trampoline can only *catch* an unwinding panic; a `panic = "abort"`
# cdylib would abort the whole interpreter. This crate is its own workspace
# root (the `[workspace]` below) so it does NOT inherit the core's
# `panic = "abort"` release profile.
[profile.release]
panic = "unwind"
# Match the core's release profile so the shipped wheel is as fast as a native
# Rust build (cross-crate inlining of the decode + materialize hot loops).
# Costs wheel build time (LTO); worth it for a read-throughput library.
opt-level = 3
lto = "fat"
codegen-units = 1

[workspace]
