[package]
name = "oxihipo-py"
version = "0.1.1"
edition = "2021"
publish = false
description = "Python bindings for the oxihipo HIPO reader"

[lib]
name = "_oxihipo"
# cdylib: the importable extension module. rlib: lets `cargo check`/doc the
# pure-Rust parts without an interpreter.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Enable the C LZ4 backend (`lz4-c`) in the wheel: the binding *writes* too
# (via `Writer`/`skim`), so it needs the real HC path — without it
# `compression="lz4best"` silently produces plain-`lz4` output. `lz4-c` also
# decodes ~10% faster than the pure-Rust `lz4_flex`. `lz4-sys` vendors and
# builds the C source (no system liblz4 dependency), so the wheel build only
# needs a C compiler, which every cibuildwheel image provides.
oxihipo = { path = "..", features = ["lz4-c"] }
# abi3-py310: one cp310-abi3 wheel per (OS, arch) covers CPython 3.10+ (matching
# `requires-python = ">=3.10"` in pyproject.toml). `from __future__ import
# annotations` + PEP 604 unions need only 3.10, so there is no reason to exclude
# 3.10–3.12.
# `generate-import-lib` lets the **Windows** wheel build *without* a Python
# interpreter (abi3 supports this via python3-dll-a). No-op on Linux/macOS.
pyo3 = { version = "0.29", features = [
    "abi3-py310",
    "extension-module",
    "generate-import-lib",
] }
# rust-numpy tracks pyo3; 0.29 pairs with pyo3 0.29 and exposes the stable
# `Vec::into_pyarray(py) -> Bound<PyArray>` zero-copy move.
numpy = "0.29"

# PyO3's trampoline can only *catch* an unwinding panic; a `panic = "abort"`
# cdylib would abort the whole interpreter. This crate is its own workspace
# root (the `[workspace]` below) so it does NOT inherit the core's
# `panic = "abort"` release profile.
[profile.release]
panic = "unwind"
# Match the core's release profile so the shipped wheel is as fast as a native
# Rust build (cross-crate inlining of the decode + materialize hot loops).
# Costs wheel build time (LTO); worth it for a read-throughput library.
opt-level = 3
lto = "fat"
codegen-units = 1

[workspace]
