[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "oxihipo"
version = "0.1.0"
description = "Fast columnar reading of HIPO (CLAS12) files, powered by Rust"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mathieu Ouillon" }]
keywords = ["hipo", "clas12", "jefferson-lab", "awkward", "columnar", "physics"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
# NumPy is required (the columnar buffers are ndarrays). Awkward is imported
# lazily, only inside array()/arrays(), so the numpy() path works without it.
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
awkward = ["awkward>=2.6"]
pandas = ["pandas>=2.0"]

[project.urls]
Repository = "https://github.com/mathieuouillon/oxihipo"

[tool.maturin]
# The compiled extension is `oxihipo._oxihipo`; the pure-Python ergonomics
# (Awkward assembly, uproot-style API) live in `python/oxihipo/`.
python-source = "python"
module-name = "oxihipo._oxihipo"
features = ["pyo3/extension-module"]
