[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "oxihipo"
version = "0.1.1"
description = "Fast columnar reading of HIPO (CLAS12) files, powered by Rust"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mathieu Ouillon" }]
keywords = ["hipo", "clas12", "jefferson-lab", "awkward", "columnar", "physics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
]
# NumPy is required (the columnar buffers are ndarrays). Awkward is imported
# lazily, only inside array()/arrays(), so the numpy() path works without it.
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
# Each extra pulls in everything its backend actually imports: the pandas and
# arrow assemblers both go through awkward, so listing pandas/pyarrow alone
# would install a backend that fails at first use.
awkward = ["awkward>=2.6"]
pandas = ["awkward>=2.6", "pandas>=2.0"]
arrow = ["pyarrow>=14"]
# `root` = the ROOT RDataFrame bridge. Awkward's ROOT interop generates the
# RDataSource, so it's the pip-installable part; ROOT/PyROOT itself is NOT on
# PyPI — install it via conda-forge or your system so `import ROOT` works.
root = ["awkward>=2.6"]
all = ["awkward>=2.6", "pandas>=2.0", "pyarrow>=14"]

[project.urls]
Homepage = "https://mathieuouillon.github.io/oxihipo/"
Documentation = "https://mathieuouillon.github.io/oxihipo/docs/python/reading"
Repository = "https://github.com/mathieuouillon/oxihipo"
Changelog = "https://github.com/mathieuouillon/oxihipo/blob/main/CHANGELOG.md"
Issues = "https://github.com/mathieuouillon/oxihipo/issues"

[tool.maturin]
# The compiled extension is `oxihipo._oxihipo`; the pure-Python ergonomics
# (Awkward assembly, uproot-style API) live in `python/oxihipo/`.
python-source = "python"
module-name = "oxihipo._oxihipo"
features = ["pyo3/extension-module"]

[tool.mypy]
files = ["python/oxihipo"]
# Minimum supported interpreter — check the code against 3.13 semantics.
python_version = "3.13"
# awkward/pandas/pyarrow are optional runtime deps imported lazily; don't fail
# type-checking when their stubs aren't installed.
ignore_missing_imports = true
