[package]
name = "hipo-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Algorithm-based analysis framework for HIPO / CLAS12 data, built on the hipo crate."

[dependencies]
hipo = { path = "../hipo" }
ndhistogram.workspace = true
serde.workspace = true
serde_json.workspace = true
dyn-clone.workspace = true
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
