[package]
name = "hipo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure-Rust HIPO v6 reader and writer (Jefferson Lab CLAS12)."

[dependencies]
thiserror.workspace = true
lz4_flex.workspace = true
flate2.workspace = true
memmap2.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
glob.workspace = true
mimalloc = { version = "0.1", default-features = false, optional = true }
# Optional: the official C LZ4 bindings. When the `lz4-c` feature is on,
# we use `lz4-sys` for both default and high-compression LZ4 paths.
# Benefits:
#   - decompression: ~10–15% faster on Apple Silicon than `lz4_flex`.
#   - compression: enables real LZ4 HC (`Lz4Best`), matching the
#     compression ratio of the original C++ writer (≈ 10–15% smaller
#     output files).
# Cost: pulls in a C dependency. Off by default; the pure-Rust path
# remains the default.
lz4-sys = { version = "1.10", optional = true }

[features]
default = []
# Override the global allocator with mimalloc. Library users opt in when
# they need it on macOS, where the system allocator underperforms under
# heavy allocation churn. Cross-platform — works on macOS and Linux
# equivalently.
mimalloc-allocator = ["dep:mimalloc"]
# Use the C LZ4 bindings (`lz4-sys`) instead of the pure-Rust `lz4_flex`.
# Faster decompression and unlocks `LZ4_compress_HC` for `Compression::Lz4Best`.
lz4-c = ["dep:lz4-sys"]
# Route LZ4 *decompression* through Apple's system `libcompression` framework
# (`COMPRESSION_LZ4_RAW`). On Apple Silicon this is ~7% faster than the
# reference C `liblz4`. Decompression-only; compression still uses
# `lz4-c` or `lz4_flex`. Active only on macOS (the cfg-gate is in
# `compress.rs`); enabling it on other platforms is a no-op.
lz4-apple = []

[dev-dependencies]
tempfile = "3"
criterion.workspace = true
proptest.workspace = true

[lib]
bench = false
